--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,16 @@
-PORT=4000
+PORT = 3000
+
+# MongoDB
+MONGODB_URI = "mongodb+srv://khushi:khushi123@cluster0.gjo5zbc.mongodb.net"
+
+# Admin Credentials
+ADMIN_EMAIL = "admin@example.com"
+ADMIN_PASSWORD = "password123"
+
+# Secret Key
+JWT_SECRET = "quickblog2025"
+
+# Imagekit keys
+IMAGEKIT_PUBLIC_KEY = "public_ZuPR9CmJaBXRUt6uaQCmfo7SR10="
+IMAGEKIT_PRIVATE_KEY = "private_2vmoQ1EfhxttbhvdjoeZd4p320o="
+IMAGEKIT_URL_ENDPOINT = "https://ik.imagekit.io/khushi1924"
