--- a/client/package.json
+++ b/client/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.13",
+    "axios": "^1.12.2",
     "framer-motion": "^12.23.22",
     "moment": "^2.30.1",
     "quill": "^2.0.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-hot-toast": "^2.6.0",
     "react-loading-skeleton": "^3.5.0",
     "react-router-dom": "^7.9.3",
     "tailwindcss": "^4.1.13"
