--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.1.13",
     "axios": "^1.12.2",
     "framer-motion": "^12.23.22",
+    "marked": "^16.4.0",
     "moment": "^2.30.1",
     "quill": "^2.0.3",
     "react": "^19.1.1",
