--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@google/genai": "^1.23.0",
     "@imagekit/nodejs": "^7.1.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
