--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "@google/genai": "^1.23.0",
     "@imagekit/nodejs": "^7.1.1",
+    "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
